product-service/src/main/java/com/example/productservice/error/exception/FileException.java
package com.example.productservice.error.exception;

public class FileException extends RuntimeException{
    public FileException(String message) {
        super(message);
    }
}
